Add Github links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,11 @@
           </h1>
         </header>
 
+        <aside id="github-links">
+          <p><a href="{{ site.github.repository_url }}/edit/master/{{ page.path }}">Make an Edit</a></p>
+          <p><a href="{{ site.github.issues_url }}/new">Report a Problem</a></p>
+        </aside>
+
         {{ content }}
     </article>
 
