--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,21 @@ hr {
 }
 
 @media screen and (min-width: 80em) {
-    #markdown-toc {
-        float: left;
-        margin-left: -18em;
+    #markdown-toc, #github-links {
         font-size: 75%;
         position: fixed;
         top: 1.2em;
         line-height: 1.3em;
+    }
+
+    #markdown-toc {
+        float: left;
+        left: 1.2em;
+    }
+
+    #github-links {
+        float: right;
+        right: 8.2em;
     }
 }
 
