--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <nav>
+      <small><a href="/">&lt; Back</a></small>
+    </nav>
+
     <article>
         <header>
           <h1>
