--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,9 @@ hr {
     width: 50%;
 }
 
-@media screen and (min-width: 80em) {
+@media screen and (min-width: 82em) {
     #markdown-toc, #github-links {
-        font-size: 75%;
+        font-size: .7em;
         position: fixed;
         top: 1.2em;
         line-height: 1.3em;
@@ -29,7 +29,7 @@ hr {
 
     #markdown-toc {
         float: left;
-        left: 1.2em;
+        left: .2em;
     }
 
     #github-links {
