--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,14 @@ td, th {
     padding: .5em;
 }
 
+.footnotes {
+    border-top: 1px solid black;
+    margin-top: 2.2em;
+
+    font-size: .7em;
+    line-height: 1.3em;
+}
+
 @media screen and (min-width: 82em) {
     #github-links {
         font-size: .7em;
